shellscript repaired